<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Baslik1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mus1" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baslangic" />

    <TextView
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ana_yemek" />

    <TextView
        android:id="@+id/EditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tatli" />

    <TextView
        android:id="@+id/EditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icecek" />

    <TextView
        android:id="@+id/EditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/Baslik2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mus2" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baslangic" />

    <TextView
        android:id="@+id/EditText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ana_yemek" />

    <TextView
        android:id="@+id/EditText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tatli" />

    <TextView
        android:id="@+id/EditText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icecek" />

    <TextView
        android:id="@+id/EditText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Baslik3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mus3" />

    <TextView
        android:id="@+id/TextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baslangic" />

    <TextView
        android:id="@+id/EditText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ana_yemek" />

    <TextView
        android:id="@+id/EditText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tatli" />

    <TextView
        android:id="@+id/EditText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icecek" />

    <TextView
        android:id="@+id/EditText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>